--- a/styles.css
+++ b/styles.css
@@ -107,11 +107,19 @@
   @media only screen and (max-width: 600px) {
     .apply img {
         height: 140px;
+        margin-left: 10px;
+    }
+
+    .apply {
+      font-size: 1.2rem;
+      display: flex;
+      flex-direction: column;
+      padding-bottom: 20px;
+      border-bottom: 5px solid darkblue;    
     }}
 
   /*  Apply */
 
-  
 .fields {
     width: 100%;
     display: flex;
